--- a/index.html
+++ b/index.html
@@ -1,160 +1,295 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Gravity Ball</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nolan's Games</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
   <style>
+    :root {
+      --bg-color: #1a1a2e;
+      --panel-color: #16213e;
+      --accent: #e94560;
+      --text-light: #f0f0f0;
+      --overlay-bg: rgba(20, 20, 40, 0.8);
+      --radius: 12px;
+    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
+      background: var(--bg-color) url('https://i.imgur.com/3Z5bQPl.png') no-repeat center / cover;
+      color: var(--text-light);
+      font-family: 'Press Start 2P', cursive, sans-serif;
+      overflow-y: scroll;
+    }
+    header {
       text-align: center;
-      background: #f0f0f0;
-      font-family: Arial, sans-serif;
+      padding: 20px;
+      font-size: 32px;
+      letter-spacing: 2px;
+      position: sticky;
+      top: 0;
+      background: var(--panel-color);
+      z-index: 10;
     }
-    #game-container {
-      width: 400px;
+    .container {
+      max-width: 1200px;
       margin: 20px auto;
+      padding: 0 20px;
     }
-    #start-button {
-      padding: 10px 20px;
-      font-size: 16px;
-      margin-bottom: 10px;
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
     }
+    .game-box {
+      position: relative;
+      background: var(--panel-color);
+      height: 300px;
+      border-radius: var(--radius);
+      overflow: hidden;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    }
+    .overlay {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: var(--overlay-bg);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      transition: opacity 0.3s;
+      z-index: 5;
+    }
+    .overlay.hidden { opacity: 0; pointer-events: none; }
+    .overlay h2 { margin-bottom: 10px; }
+    .overlay button {
+      padding: 8px 16px;
+      font-family: inherit;
+      cursor: pointer;
+      background: var(--accent);
+      color: var(--text-light);
+      border: none;
+      border-radius: var(--radius);
+    }
+    .parallax {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('https://i.imgur.com/AdXqO6Q.png') no-repeat center / contain;
+      opacity: 0.2;
+      pointer-events: none;
+      transform: translateY(0);
+      transition: transform 0.1s;
+    }
+    .coming-soon { font-size: 18px; }
   </style>
 </head>
 <body>
-
-  <h1>Gravity Ball</h1>
-  <button id="start-button">Start Game</button>
-  <div id="game-container"></div>
-
+  <header>Nolan's Games</header>
+  <div class="container">
+    <div class="grid">
+      <!-- Game 1: Gravity Switcher -->
+      <div class="game-box">
+        <div class="parallax"></div>
+        <div class="overlay" id="overlay-gravity">
+          <h2>Gravity Switcher</h2>
+          <button data-game="gravity">Play</button>
+        </div>
+        <div id="game-gravity"></div>
+      </div>
+      <!-- Game 2: Space Shooter -->
+      <div class="game-box">
+        <div class="parallax"></div>
+        <div class="overlay" id="overlay-shooter">
+          <h2>Space Shooter</h2>
+          <button data-game="shooter">Play</button>
+        </div>
+        <div id="game-shooter"></div>
+      </div>
+      <!-- Game 3: Platform Jumper -->
+      <div class="game-box">
+        <div class="parallax"></div>
+        <div class="overlay" id="overlay-jumper">
+          <h2>Platform Jumper</h2>
+          <button data-game="jumper">Play</button>
+        </div>
+        <div id="game-jumper"></div>
+      </div>
+      <!-- Game 4: Block Drop -->
+      <div class="game-box">
+        <div class="parallax"></div>
+        <div class="overlay" id="overlay-drop">
+          <h2>Block Drop</h2>
+          <button data-game="drop">Play</button>
+        </div>
+        <div id="game-drop"></div>
+      </div>
+      <!-- Remaining placeholders -->
+      <!-- 23 placeholders to fill 27 total -->
+    </div>
+  </div>
   <script>
-    let game;
-    let gameStarted = false;
-
-    document.getElementById('start-button').onclick = () => {
-      if (gameStarted) return;
-      gameStarted = true;
-
+    // Parallax scroll
+    window.addEventListener('scroll', () => {
+      document.querySelectorAll('.parallax').forEach(el => {
+        el.style.transform = `translateY(${window.pageYOffset * 0.2}px)`;
+      });
+    });
+    // Generate placeholders
+    const grid = document.querySelector('.grid');
+    for (let i = 0; i < 23; i++) {
+      const box = document.createElement('div'); box.className = 'game-box';
+      const par = document.createElement('div'); par.className = 'parallax';
+      const ov = document.createElement('div'); ov.className = 'overlay';
+      const txt = document.createElement('div'); txt.className = 'coming-soon'; txt.textContent = 'Coming Soon';
+      ov.append(txt);
+      box.append(par, ov);
+      grid.append(box);
+    }
+    // Manage game instances
+    const games = {};
+    function stopAll() {
+      Object.values(games).forEach(g => { if (g) g.destroy(true); });
+    }
+    // Game start handlers
+    document.querySelectorAll('.overlay button').forEach(btn => {
+      btn.addEventListener('click', () => {
+        const key = btn.getAttribute('data-game');
+        document.getElementById(`overlay-${key}`).classList.add('hidden');
+        stopAll();
+        initGame(key);
+      });
+    });
+    // Initialize selected game
+    function initGame(key) {
+      switch(key) {
+        case 'gravity': initGravity(); break;
+        case 'shooter': initShooter(); break;
+        case 'jumper': initJumper(); break;
+        case 'drop': initDrop(); break;
+      }
+    }
+    // Gravity Switcher
+    function initGravity() {
       const config = {
-        type: Phaser.AUTO,
-        width: 400,
-        height: 300,
-        backgroundColor: '#ffffff',
-        parent: 'game-container',
-        physics: {
-          default: 'arcade',
-          arcade: {
-            gravity: { y: 0 },
-            debug: false
-          }
-        },
-        scene: {
-          preload,
-          create,
-          update
-        }
+        type: Phaser.AUTO, width:400, height:300, backgroundColor:'transparent', parent:'game-gravity',
+        physics:{ default:'arcade', arcade:{ gravity:{y:0} } },
+        scene:{ create: gravityCreate, update: gravityUpdate }
       };
-
-      game = new Phaser.Game(config);
-    };
-
-    let player, cursors, timerText, elapsedTime = 0;
-    let obstacles = [];
-    let obstacleSpeed = 100;
-    let spawnTimer = 0;
-    const maxObstacles = 2;
-
-    function preload() {}
-
-    function create() {
-      cursors = this.input.keyboard.createCursorKeys();
-
-      // Ball setup
-      player = this.physics.add.sprite(50, 270, null).setDisplaySize(20, 20);
-      player.body.setAllowGravity(false);
-      player.setImmovable(true);
-      player.setCollideWorldBounds(true);
-      player.setTint(0x0077ff);
-
-      // Timer display
-      timerText = this.add.text(10, 10, 'Time: 0s', {
-        font: '16px Arial',
-        fill: '#000'
-      });
-
-      // Timer to spawn obstacles every few seconds
-      this.time.addEvent({
-        delay: 100,
-        loop: true,
-        callback: () => {
-          elapsedTime += 0.1;
-          timerText.setText('Time: ' + elapsedTime.toFixed(1) + 's');
-          obstacleSpeed = 100 + Math.floor(elapsedTime * 5);
-        }
-      });
-
-      // Add collision check
-      this.physics.add.overlap(player, obstacles, () => {
-        endGame(this);
+      games.gravity = new Phaser.Game(config);
+    }
+    let gravPlayer, gravCursors, gravObs = [], gravTimer=0, gravSpeed=100;
+    function gravityCreate() {
+      gravCursors = this.input.keyboard.createCursorKeys();
+      gravPlayer = this.physics.add.sprite(50,270).setDisplaySize(20,20).setTint(0x00ffb3);
+      gravPlayer.body.setAllowGravity(false).setImmovable(true).setCollideWorldBounds(true);
+      this.time.addEvent({ delay:100, loop:true, callback:()=>{ gravSpeed+=0.5; }});
+    }
+    function gravityUpdate(_,dt) {
+      if (gravCursors.up.isDown) this.tweens.add({ targets:gravPlayer, y:30, duration:200 });
+      else if (gravCursors.down.isDown) this.tweens.add({ targets:gravPlayer, y:270, duration:200 });
+      gravTimer+=dt;
+      if (gravObs.length<2 && gravTimer>1000) { spawnGravOb(this); gravTimer=0; }
+      gravObs.forEach((o,i) => {
+        o.x -= gravSpeed*dt/1000;
+        if (o.x< -50) { o.destroy(); gravObs.splice(i,1); spawnGravOb(this); }
+        if (Phaser.Geom.Intersects.RectangleToRectangle(gravPlayer.getBounds(), o.getBounds())) restart('gravity');
       });
     }
-
-    function update(time, delta) {
-      if (!player) return;
-
-      // Movement: press up to stick to top, down to bottom
-      if (cursors.up.isDown) {
-        player.setY(30);
-      } else if (cursors.down.isDown) {
-        player.setY(270);
+    function spawnGravOb(scene) {
+      const y = Math.random()>0.5?30:270;
+      const o = scene.add.rectangle(420,y,50,20,0xff0000).setOrigin(0.5);
+      scene.physics.add.existing(o,true);
+      gravObs.push(o);
+    }
+    // Space Shooter
+    function initShooter() {
+      const cfg = { type:Phaser.AUTO, width:400, height:300, backgroundColor:'transparent', parent:'game-shooter',
+        physics:{ default:'arcade', arcade:{ gravity:{y:0} } },
+        scene:{ preload:shootPre, create:shootCreate, update:shootUpdate }
+      };
+      games.shooter = new Phaser.Game(cfg);
+    }
+    let shooterPlayer, bullets, enemies, shootCursor;
+    function shootPre() { this.load.image('ship','https://i.imgur.com/6b7YjkQ.png'); this.load.image('bullet','https://i.imgur.com/KYJcpuT.png'); this.load.image('enemy','https://i.imgur.com/FJz6Z4G.png'); }
+    function shootCreate() {
+      shootCursor = this.input.keyboard.createCursorKeys();
+      shooterPlayer = this.physics.add.sprite(200,280,'ship').setScale(0.3);
+      bullets = this.physics.add.group();
+      enemies = this.physics.add.group();
+      this.time.addEvent({ delay:1500, loop:true, callback:()=>{
+        const x=Phaser.Math.Between(50,350);
+        const e = enemies.create(x,0,'enemy').setScale(0.2);
+        e.body.setVelocityY(100 + games.shooter.scene.scenes[0].time.now/10000*50);
+      }});
+      this.physics.add.overlap(bullets,enemies,(b,e)=>{ b.destroy(); e.destroy(); });
+      this.physics.add.overlap(shooterPlayer,enemies,()=>restart('shooter'));
+    }
+    function shootUpdate() {
+      shooterPlayer.setVelocityX(0);
+      if (shootCursor.left.isDown) shooterPlayer.setVelocityX(-200);
+      else if (shootCursor.right.isDown) shooterPlayer.setVelocityX(200);
+      if (Phaser.Input.Keyboard.JustDown(shootCursor.space)) {
+        const b = bullets.create(shooterPlayer.x,shooterPlayer.y-20,'bullet').setScale(0.2);
+        b.body.setVelocityY(-300);
       }
-
-      // Handle obstacles
-      spawnTimer += delta;
-      if (obstacles.length < maxObstacles && spawnTimer > 1000) {
-        spawnObstacle(this);
-        spawnTimer = 0;
+    }
+    // Platform Jumper
+    function initJumper() {
+      const cfg = { type:Phaser.AUTO, width:400, height:300, backgroundColor:'transparent', parent:'game-jumper',
+        physics:{ default:'arcade', arcade:{ gravity:{y:500} } },
+        scene:{ preload:jumpPre, create:jumpCreate, update:jumpUpdate }
+      };
+      games.jumper = new Phaser.Game(cfg);
+    }
+    let jumperPlayer, platforms, jumpCursor;
+    function jumpPre() { this.load.image('block','https://i.imgur.com/8gSx4fT.png'); }
+    function jumpCreate() {
+      jumpCursor = this.input.keyboard.createCursorKeys();
+      platforms = this.physics.add.staticGroup();
+      platforms.create(200,300,'block').setScale(4,0.5).refreshBody();
+      jumperPlayer = this.physics.add.sprite(50,250,'block').setTint(0x00ffaa).setDisplaySize(20,20);
+      this.physics.add.collider(jumperPlayer,platforms);
+    }
+    function jumpUpdate() {
+      if (jumpCursor.left.isDown) jumperPlayer.setVelocityX(-150);
+      else if (jumpCursor.right.isDown) jumperPlayer.setVelocityX(150);
+      else jumperPlayer.setVelocityX(0);
+      if (Phaser.Input.Keyboard.JustDown(jumpCursor.up) && jumperPlayer.body.touching.down) jumperPlayer.setVelocityY(-300);
+      if (jumperPlayer.y>350) restart('jumper');
+    }
+    // Block Drop
+    function initDrop() {
+      const cfg = { type:Phaser.AUTO, width:400, height:300, backgroundColor:'transparent', parent:'game-drop',
+        physics:{ default:'arcade', arcade:{ gravity:{y:0} } },
+        scene:{ create:dropCreate, update:dropUpdate }
+      };
+      games.drop = new Phaser.Game(cfg);
+    }
+    let dropBlock, stackY=300, dropCursor;
+    function dropCreate() {
+      dropCursor = this.input.keyboard.createCursorKeys();
+      dropBlock = this.add.rectangle(200,20,50,20,0x00ff00);
+    }
+    function dropUpdate() {
+      if (dropCursor.left.isDown && dropBlock.y<30) dropBlock.x -=5;
+      else if (dropCursor.right.isDown && dropBlock.y<30) dropBlock.x +=5;
+      if (Phaser.Input.Keyboard.JustDown(dropCursor.space) && dropBlock.y<30) {
+        this.physics.world.enable(dropBlock);
+        dropBlock.body.setVelocityY(200);
+        this.physics.add.collider(dropBlock, this.physics.add.staticGroup({ key: 'ground', frameQuantity:1 }).create(dropBlock.x, stackY, null).setDisplaySize(50,20), () => {
+          stackY -=20;
+          this.scene.restart();
+        });
       }
-
-      obstacles.forEach((obstacle, index) => {
-        obstacle.setVelocityX(-obstacleSpeed);
-
-        // Remove and respawn if off screen
-        if (obstacle.x < -50) {
-          obstacle.destroy();
-          obstacles.splice(index, 1);
-          spawnObstacle(this);
-        }
-
-        // Check collision manually
-        if (Phaser.Geom.Intersects.RectangleToRectangle(player.getBounds(), obstacle.getBounds())) {
-          endGame(this);
-        }
-      });
+      if (dropBlock.y>350) restart('drop');
     }
-
-    function spawnObstacle(scene) {
-      const y = Math.random() > 0.5 ? 30 : 270; // ceiling or floor
-      const obstacle = scene.physics.add.sprite(420, y, null).setDisplaySize(50, 20);
-      obstacle.setTint(0xff0000);
-      obstacle.setImmovable(true);
-      obstacle.body.setAllowGravity(false);
-      obstacle.setVelocityX(-obstacleSpeed);
-      obstacles.push(obstacle);
-    }
-
-    function endGame(scene) {
-      scene.physics.pause();
-      const deathText = scene.add.text(200, 150, 'YOU DIED\nClick to Restart', {
-        font: '20px Arial',
-        fill: '#ff0000',
-        align: 'center'
-      });
-      deathText.setOrigin(0.5);
-      scene.input.once('pointerdown', () => {
-        game.destroy(true);
-        gameStarted = false;
-        document.getElementById('start-button').innerText = "Restart Game";
-      });
+    // Restart handler
+    function restart(key) {
+      stopAll();
+      document.getElementById(`overlay-${key}`).classList.remove('hidden');
     }
   </script>
 </body>
