--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     :root {
       --bg-color: #1a1a2e;
       --panel-color: #16213e;
-      --accent: #e94560;
-      --text-light: #f0f0f0;
+      --accent-color: #e94560;
+      --text-color: #f0f0f0;
       --overlay-bg: rgba(20, 20, 40, 0.8);
       --radius: 12px;
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       background: var(--bg-color) url('https://i.imgur.com/3Z5bQPl.png') no-repeat center/cover;
-      color: var(--text-light);
+      color: var(--text-color);
       font-family: 'Press Start 2P', cursive, sans-serif;
       overflow-y: auto;
     }
@@ -50,7 +50,7 @@
     }
     .overlay {
       position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
+      inset: 0;
       background: var(--overlay-bg);
       display: flex;
       flex-direction: column;
@@ -68,26 +68,24 @@
     }
     .overlay button {
       padding: 8px 16px;
-      font-family: inherit;
-      cursor: pointer;
-      background: var(--accent);
-      color: var(--text-light);
+      background: var(--accent-color);
+      color: var(--text-color);
       border: none;
       border-radius: var(--radius);
+      cursor: pointer;
+      font-family: inherit;
     }
     .parallax {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      inset: 0;
       background: url('https://i.imgur.com/AdXqO6Q.png') no-repeat center/contain;
       opacity: 0.2;
       pointer-events: none;
-      transform: translateY(0);
       transition: transform 0.1s;
     }
     .coming-soon {
       font-size: 18px;
-      color: var(--text-light);
+      color: var(--text-color);
     }
   </style>
 </head>
@@ -95,7 +93,7 @@
   <header>Nolan's Games</header>
   <div class="container">
     <div class="grid" id="game-grid">
-      <!-- Four playable game boxes -->
+      <!-- Game 1: Gravity Switcher -->
       <div class="game-box">
         <div class="parallax"></div>
         <div class="overlay" id="overlay-gravity">
@@ -104,6 +102,7 @@
         </div>
         <div id="game-gravity"></div>
       </div>
+      <!-- Game 2: Space Shooter -->
       <div class="game-box">
         <div class="parallax"></div>
         <div class="overlay" id="overlay-shooter">
@@ -112,6 +111,7 @@
         </div>
         <div id="game-shooter"></div>
       </div>
+      <!-- Game 3: Platform Jumper -->
       <div class="game-box">
         <div class="parallax"></div>
         <div class="overlay" id="overlay-jumper">
@@ -120,6 +120,7 @@
         </div>
         <div id="game-jumper"></div>
       </div>
+      <!-- Game 4: Block Drop -->
       <div class="game-box">
         <div class="parallax"></div>
         <div class="overlay" id="overlay-drop">
@@ -128,190 +129,90 @@
         </div>
         <div id="game-drop"></div>
       </div>
-      <!-- 23 'Coming Soon' placeholders -->
+      <!-- 23 Coming Soon -->
     </div>
   </div>
   <script>
-    // Parallax background effect on scroll
+    // Parallax
     window.addEventListener('scroll', () => {
       document.querySelectorAll('.parallax').forEach(el => {
         el.style.transform = `translateY(${window.pageYOffset * 0.2}px)`;
       });
     });
-    // Generate 'Coming Soon' placeholders
+    // Placeholders
     const grid = document.getElementById('game-grid');
     for (let i = 0; i < 23; i++) {
-      const box = document.createElement('div');
-      box.className = 'game-box';
-      const par = document.createElement('div'); par.className = 'parallax';
-      const overlay = document.createElement('div'); overlay.className = 'overlay';
-      const text = document.createElement('div'); text.className = 'coming-soon';
-      text.textContent = 'Coming Soon';
-      overlay.appendChild(text);
-      box.appendChild(par);
-      box.appendChild(overlay);
-      grid.appendChild(box);
+      const box = document.createElement('div'); box.className='game-box';
+      const par = document.createElement('div'); par.className='parallax';
+      const ov = document.createElement('div'); ov.className='overlay';
+      const txt = document.createElement('div'); txt.className='coming-soon'; txt.textContent='Coming Soon';
+      ov.appendChild(txt);
+      box.append(par, ov);
+      grid.append(box);
     }
-    // Manage game instances
+    // Manage games
     const games = {};
-    function stopAllGames() {
-      Object.keys(games).forEach(key => {
-        if (games[key]) games[key].destroy(true);
-      });
-    }
-    // Overlay button handlers
-    document.querySelectorAll('.overlay button').forEach(btn => {
-      btn.addEventListener('click', () => {
-        const gameKey = btn.getAttribute('data-game');
-        stopAllGames();
-        document.getElementById(`overlay-${gameKey}`).classList.add('hidden');
-        startGame(gameKey);
-      });
-    });
-    // Start selected game
+    function stopAll() { for (let k in games) if (games[k]) games[k].destroy(true); }
+    // Buttons
+    document.querySelectorAll('.overlay button').forEach(btn => btn.addEventListener('click', ()=>{
+      const key = btn.getAttribute('data-game');
+      stopAll();
+      document.getElementById(`overlay-${key}`).classList.add('hidden');
+      startGame(key);
+    }));
+    function restart(key) { stopAll(); document.getElementById(`overlay-${key}`).classList.remove('hidden'); }
     function startGame(key) {
-      switch (key) {
-        case 'gravity': initGravity(); break;
-        case 'shooter': initShooter(); break;
-        case 'jumper': initJumper(); break;
-        case 'drop': initDrop(); break;
-      }
+      if (key==='gravity') initGravity();
+      if (key==='shooter') initShooter();
+      if (key==='jumper') initJumper();
+      if (key==='drop') initDrop();
     }
-    // Utility: restart game
-    function restartGame(key) {
-      stopAllGames();
-      document.getElementById(`overlay-${key}`).classList.remove('hidden');
-    }
-    // ---- Game 1: Gravity Switcher ----
+    // Game 1
     function initGravity() {
-      gravObs = [];
-      gravSpeed = 100;
-      gravTimer = 0;
-      const cfg = {
-        type: Phaser.AUTO,
-        width: 400, height: 300,
-        backgroundColor: 'transparent', parent: 'game-gravity',
-        physics: { default: 'arcade', arcade: { gravity: { y: 0 } } },
-        scene: { create: gravityCreate, update: gravityUpdate }
-      };
-      games.gravity = new Phaser.Game(cfg);
-    }
-    let gravPlayer, gravCursors, gravObs, gravTimer, gravSpeed;
-    function gravityCreate() {
-      gravCursors = this.input.keyboard.createCursorKeys();
-      gravPlayer = this.physics.add.rectangle(50, 270, 20, 20, 0x00ffb3);
-      this.physics.add.existing(gravPlayer);
-      gravPlayer.body.setImmovable(true).setCollideWorldBounds(true);
-      this.tweens.killAll();
-      this.time.addEvent({ delay: 100, loop: true, callback: () => gravSpeed += 0.5 });
-    }
-    function gravityUpdate(_, dt) {
-      if (gravCursors.up.isDown) this.tweens.add({ targets: gravPlayer, y: 30, duration: 200, overwrite: true });
-      else if (gravCursors.down.isDown) this.tweens.add({ targets: gravPlayer, y: 270, duration: 200, overwrite: true });
-      gravTimer += dt;
-      if (gravObs.length < 2 && gravTimer > 1000) { spawnGravOb(this); gravTimer = 0; }
-      gravObs.forEach((o, i) => {
-        o.x -= (gravSpeed * dt) / 1000;
-        if (o.x < -50) { o.destroy(); gravObs.splice(i, 1); spawnGravOb(this); }
-        if (Phaser.Geom.Intersects.RectangleToRectangle(gravPlayer.getBounds(), o.getBounds())) restartGame('gravity');
-      });
-    }
-    function spawnGravOb(scene) {
-      const y = Math.random() > 0.5 ? 30 : 270;
-      const ob = scene.add.rectangle(420, y, 50, 20, 0xff0000);
-      scene.physics.add.existing(ob, true);
-      gravObs.push(ob);
-    }
-    // ---- Game 2: Space Shooter ----
-    function initShooter() {
-      const cfg = {
-        type: Phaser.AUTO, width: 400, height: 300,
-        backgroundColor: 'transparent', parent: 'game-shooter',
-        physics: { default: 'arcade', arcade: { gravity: { y: 0 } } },
-        scene: { preload: shooterPreload, create: shooterCreate, update: shooterUpdate }
-      };
-      games.shooter = new Phaser.Game(cfg);
-    }
-    let ship, cursors, bullets, enemies;
-    function shooterPreload() {
-      this.load.image('ship', 'https://i.imgur.com/6b7YjkQ.png');
-      this.load.image('bullet', 'https://i.imgur.com/KYJcpuT.png');
-      this.load.image('enemy', 'https://i.imgur.com/FJz6Z4G.png');
-    }
-    function shooterCreate() {
-      cursors = this.input.keyboard.createCursorKeys();
-      ship = this.physics.add.sprite(200, 280, 'ship').setScale(0.3).setCollideWorldBounds(true);
-      bullets = this.physics.add.group();
-      enemies = this.physics.add.group();
-      this.time.addEvent({ delay: 1500, loop: true, callback: () => {
-        const x = Phaser.Math.Between(50, 350);
-        const e = enemies.create(x, 0, 'enemy').setScale(0.2);
-        e.body.setVelocityY(100 + this.time.now / 2000);
-      }});
-      this.physics.add.overlap(bullets, enemies, (b, e) => { b.destroy(); e.destroy(); });
-      this.physics.add.overlap(ship, enemies, () => restartGame('shooter'));
-    }
-    function shooterUpdate() {
-      ship.setVelocityX(0);
-      if (cursors.left.isDown) ship.setVelocityX(-200);
-      else if (cursors.right.isDown) ship.setVelocityX(200);
-      if (Phaser.Input.Keyboard.JustDown(cursors.space)) {
-        const b = bullets.create(ship.x, ship.y - 20, 'bullet').setScale(0.2);
-        b.body.setVelocityY(-300);
+      let obs=[], speed=100, timer=0;
+      const cfg={type:Phaser.AUTO,width:400,height:300,backgroundColor:'transparent',parent:'game-gravity',physics:{default:'arcade',arcade:{gravity:{y:0}}},scene:{create,update}};
+      games.gravity=new Phaser.Game(cfg);
+      function create(){
+        this.cursors=this.input.keyboard.createCursorKeys();
+        this.player=this.physics.add.rectangle(50,270,20,20,0x00ffb3);
+        this.physics.add.existing(this.player);
+        this.player.body.setImmovable(true).setCollideWorldBounds(true);
+        this.time.addEvent({delay:100,loop:true,callback:()=>speed+=0.5});
       }
-    }
-    // ---- Game 3: Platform Jumper ----
-    function initJumper() {
-      const cfg = {
-        type: Phaser.AUTO, width: 400, height: 300,
-        backgroundColor: 'transparent', parent: 'game-jumper',
-        physics: { default: 'arcade', arcade: { gravity: { y: 500 } } },
-        scene: { preload: jumperPreload, create: jumperCreate, update: jumperUpdate }
-      };
-      games.jumper = new Phaser.Game(cfg);
-    }
-    let playerJ, platformGroup;
-    function jumperPreload() { this.load.image('block', 'https://i.imgur.com/8gSx4fT.png'); }
-    function jumperCreate() {
-      cursors = this.input.keyboard.createCursorKeys();
-      platformGroup = this.physics.add.staticGroup();
-      platformGroup.create(200, 300, 'block').setScale(4, 0.5).refreshBody();
-      playerJ = this.physics.add.sprite(50, 250, 'block').setTint(0x00ffaa).setDisplaySize(20,20);
-      this.physics.add.collider(playerJ, platformGroup, null, null, this);
-    }
-    function jumperUpdate() {
-      if (cursors.left.isDown) playerJ.setVelocityX(-150);
-      else if (cursors.right.isDown) playerJ.setVelocityX(150);
-      else playerJ.setVelocityX(0);
-      if (Phaser.Input.Keyboard.JustDown(cursors.up) && playerJ.body.onFloor()) playerJ.setVelocityY(-300);
-      if (playerJ.y > 350) restartGame('jumper');
-    }
-    // ---- Game 4: Block Drop ----
-    function initDrop() {
-      const cfg = {
-        type: Phaser.AUTO, width: 400, height: 300,
-        backgroundColor: 'transparent', parent: 'game-drop',
-        physics: { default: 'arcade', arcade: { gravity: { y: 0 } } },
-        scene: { create: dropCreate, update: dropUpdate }
-      };
-      games.drop = new Phaser.Game(cfg);
-    }
-    let dropBlock, dropCursors;
-    function dropCreate() {
-      dropCursors = this.input.keyboard.createCursorKeys();
-      dropBlock = this.add.rectangle(200, 20, 50, 20, 0x00ff00);
-    }
-    function dropUpdate() {
-      if (dropCursors.left.isDown && dropBlock.y < 30) dropBlock.x -= 5;
-      else if (dropCursors.right.isDown && dropBlock.y < 30) dropBlock.x += 5;
-      if (Phaser.Input.Keyboard.JustDown(dropCursors.space) && dropBlock.y < 30) {
-        this.physics.world.enable(dropBlock);
-        dropBlock.body.setVelocityY(200);
-        this.physics.add.collider(dropBlock, this.physics.add.staticGroup().create(dropBlock.x, 300, null).setDisplaySize(50,20), () => {
-          restartGame('drop');
-        });
+      function update(_,dt){
+        if(this.cursors.up.isDown) this.tweens.add({targets:this.player,y:30,duration:200,overwrite:true});
+        else if(this.cursors.down.isDown) this.tweens.add({targets:this.player,y:270,duration:200,overwrite:true});
+        timer+=dt;
+        if(obs.length<2&&timer>1000){spawn();timer=0;}
+        obs.forEach((o,i)=>{o.x-=(speed*dt)/1000;if(o.x<-50){o.destroy();obs.splice(i,1);spawn();}if(Phaser.Geom.Intersects.RectangleToRectangle(this.player.getBounds(),o.getBounds()))restart('gravity');});
       }
-      if (dropBlock.y > 350) restartGame('drop');
+      function spawn(){const y=Math.random()>0.5?30:270;const o=games.gravity.scene.scenes[0].add.rectangle(420,y,50,20,0xff0000);games.gravity.scene.scenes[0].physics.add.existing(o,true);obs.push(o);}
+    }
+    // Game 2
+    function initShooter(){
+      let ship,bullets,enemies;
+      const cfg={type:Phaser.AUTO,width:400,height:300,backgroundColor:'transparent',parent:'game-shooter',physics:{default:'arcade',arcade:{gravity:{y:0}}},scene:{preload,create,update}};
+      games.shooter=new Phaser.Game(cfg);
+      function preload(){this.load.image('ship','https://i.imgur.com/6b7YjkQ.png');this.load.image('bullet','https://i.imgur.com/KYJcpuT.png');this.load.image('enemy','https://i.imgur.com/FJz6Z4G.png');}
+      function create(){this.cursors=this.input.keyboard.createCursorKeys();ship=this.physics.add.sprite(200,280,'ship').setScale(0.3).setCollideWorldBounds(true);bullets=this.physics.add.group();enemies=this.physics.add.group();this.time.addEvent({delay:1500,loop:true,callback:()=>{const x=Phaser.Math.Between(50,350);const e=enemies.create(x,0,'enemy').setScale(0.2);e.body.setVelocityY(100+this.time.now/2000);}});this.physics.add.overlap(bullets,enemies,(b,e)=>b.destroy()&&e.destroy());this.physics.add.overlap(ship,enemies,()=>restart('shooter'));}
+      function update(){ship.setVelocityX(0);if(this.cursors.left.isDown)ship.setVelocityX(-200);else if(this.cursors.right.isDown)ship.setVelocityX(200);if(Phaser.Input.Keyboard.JustDown(this.cursors.space)){const b=bullets.create(ship.x,ship.y-20,'bullet').setScale(0.2);b.body.setVelocityY(-300);}}
+    }
+    // Game 3
+    function initJumper(){
+      let playerJ,platforms;
+      const cfg={type:Phaser.AUTO,width:400,height:300,backgroundColor:'transparent',parent:'game-jumper',physics:{default:'arcade',arcade:{gravity:{y:500}}},scene:{preload,create,update}};
+      games.jumper=new Phaser.Game(cfg);
+      function preload(){this.load.image('block','https://i.imgur.com/8gSx4fT.png');}
+      function create(){this.cursors=this.input.keyboard.createCursorKeys();platforms=this.physics.add.staticGroup();platforms.create(200,300,'block').setScale(4,0.5).refreshBody();playerJ=this.physics.add.sprite(50,250,'block').setTint(0x00ffaa).setDisplaySize(20,20);this.physics.add.collider(playerJ,platforms);}
+      function update(){if(this.cursors.left.isDown)playerJ.setVelocityX(-150);else if(this.cursors.right.isDown)playerJ.setVelocityX(150);else playerJ.setVelocityX(0);if(Phaser.Input.Keyboard.JustDown(this.cursors.up)&&playerJ.body.onFloor())playerJ.setVelocityY(-300);if(playerJ.y>350)restart('jumper');}
+    }
+    // Game 4
+    function initDrop(){
+      let dropC;
+      const cfg={type:Phaser.AUTO,width:400,height:300,backgroundColor:'transparent',parent:'game-drop',physics:{default:'arcade',arcade:{gravity:{y:0}}},scene:{create,update}};
+      games.drop=new Phaser.Game(cfg);
+      function create(){dropC=this.input.keyboard.createCursorKeys();this.drop=this.add.rectangle(200,20,50,20,0x00ff00);}      
+      function update(){if(dropC.left.isDown&&this.drop.y<30)this.drop.x-=5;else if(dropC.right.isDown&&this.drop.y<30)this.drop.x+=5;if(Phaser.Input.Keyboard.JustDown(dropC.space)&&this.drop.y<30){this.physics.world.enable(this.drop);this.drop.body.setVelocityY(200);this.physics.add.collider(this.drop,this.physics.add.staticGroup().create(this.drop.x,300,null).setDisplaySize(50,20),()=>restart('drop'));}if(this.drop.y>350)restart('drop');}
     }
   </script>
 </body>
