--- a/index.html
+++ b/index.html
@@ -1,94 +1,66 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nolan's Games</title>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
+  <meta charset="UTF-8" />
+  <title>Retro Arcade</title>
   <style>
-    :root {
-      --bg-color-1: #1a1a2e;
-      --bg-color-2: #16213e;
-      --panel-color: #16213e;
-      --accent-color: #e94560;
-      --text-color: #f0f0f0;
-      --overlay-bg: rgba(20, 20, 40, 0.8);
-      --radius: 12px;
-    }
-    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      background: linear-gradient(135deg, var(--bg-color-1), var(--bg-color-2));
-      color: var(--text-color);
-      font-family: 'Press Start 2P', cursive, sans-serif;
-      overflow-y: auto;
-    }
-    header {
-      position: sticky;
-      top: 0;
-      background: var(--panel-color);
-      padding: 20px;
+      background-color: #1a1a1a;
+      color: #f5f5f5;
+      font-family: 'Courier New', monospace;
       text-align: center;
-      font-size: 32px;
-      z-index: 10;
+      padding: 2rem;
     }
-    .container {
-      max-width: 1200px;
-      margin: 20px auto;
-      padding: 0 20px;
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
     }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-    }
-    .game-box {
-      position: relative;
-      background: var(--panel-color);
-      height: 300px;
-      border-radius: var(--radius);
-      overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    }
-    .overlay {
-      position: absolute;
-      inset: 0;
-      background: var(--overlay-bg);
+    .gallery {
       display: flex;
-      flex-direction: column;
+      flex-wrap: wrap;
       justify-content: center;
-      align-items: center;
-      transition: opacity 0.3s;
-      z-index: 5;
+      gap: 1rem;
+      margin-top: 2rem;
     }
-    .overlay.hidden {
-      opacity: 0;
-      pointer-events: none;
+    .gallery img {
+      width: 300px;
+      height: auto;
+      border: 4px solid #f5f5f5;
+      box-shadow: 0 0 10px #ff00cc;
     }
-    .overlay h2 {
-      margin-bottom: 10px;
-    }
-    .overlay button {
-      padding: 8px 16px;
-      background: var(--accent-color);
-      color: var(--text-color);
-      border: none;
-      border-radius: var(--radius);
-      cursor: pointer;
-      font-family: inherit;
-    }
-    .parallax {
-      position: absolute;
-      inset: 0;
-      background: radial-gradient(circle at center, rgba(233,69,96,0.2) 0%, transparent 70%);
-      pointer-events: none;
-      transition: transform 0.1s;
-    }
-    .coming-soon {
-      font-size: 18px;
-      color: var(--text-color);
+    .caption {
+      margin-top: 0.5rem;
+      font-size: 1rem;
+      color: #ffcc00;
     }
   </style>
 </head>
+<body>
+  <h1>🎮 Retro Arcade</h1>
+  <p>Step back in time with these classic vibes.</p>
+
+  <div class="gallery">
+    <div>
+      <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/retro-1868728_1280.jpg" alt="Retro Camera" />
+      <div class="caption">Vintage Camera</div>
+    </div>
+    <div>
+      <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/retro-1868727_1280.jpg" alt="Cassette Tapes" />
+      <div class="caption">Cassette Tapes</div>
+    </div>
+    <div>
+      <img src="https://cdn.pixabay.com/photo/2017/08/10/07/32/retro-2616748_1280.jpg" alt="Retro TV" />
+      <div class="caption">Retro Television</div>
+    </div>
+    <div>
+      <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/retro-1868726_1280.jpg" alt="Vinyl Record" />
+      <div class="caption">Vinyl Record</div>
+    </div>
+  </div>
+</body>
+</html>
+
 <body>
   <header>Nolan's Games</header>
   <div class="container">
